css/1.css
body {
	padding-top: 50px;
}

.background {
	position: fixed;
	top: 0px;
	left: 0px;
	width: 100%;
	height: 100%;
	
	background-image: url("../images/abstract-background-with-a-3d-pattern_1319-68.jpg");
}

.page {
	position: relative;
}

.jumbotron {
	box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.075);
}

.gray-background {
	background: #eeeeee;
}

.octicon {
	vertical-align: middle;
}

.btn-primary .octicon,
.label .octicon {
	fill: currentcolor;
	vertical-align: -3px;
}

.section,
.section-header {
	margin-bottom: 20px;
}

.section .container {
	padding-bottom: 10px;
}

.section h2 .btn-group {
	margin-bottom: 10px;
}

@media screen and (min-width: 768px) {
	.section .container {
		padding-top: 10px;
		padding-bottom: 20px;
	}

	.section h2 .btn-group {
		margin-left: 10px;
	}
}

.section .section {
	padding: 0px 20px 10px;
}

.blur-background {
	background-color: rgba(255, 255, 255, 0.9);
}

@supports (-webkit-backdrop-filter: blur(20px)) or (backdrop-filter: blur(20px)) {
	.blur-background {
		background-color: rgba(255, 255, 255, 0.2);
		-webkit-backdrop-filter: blur(20px) brightness(130%);
		backdrop-filter: blur(20px) brightness(130%);
	}
	
	@media (prefers-reduced-motion) {
		.blur-background {
			background-color: rgba(255, 255, 255, 0.5);
		}
	}
}

.anchor {
	position: relative;
	top: -70px;
}

.icon-facebook, .icon-twitter, .icon-reddit, .icon-github, .icon-keybase, .icon-discord {
	font-size: 0px;
	background: center no-repeat / 20px;
	width: 20px;
	height: 20px;
	line-height: 20px;
	vertical-align: middle;
	padding: 0px !important;
	display: inline-block;
	margin-left: 5px;
	transition: transform 0.2s ease;
}
.icon-facebook:hover, .icon-twitter:hover, .icon-reddit:hover, .icon-github:hover, .icon-keybase:hover, .icon-discord:hover {
	transform: scale(1.1);
}
.jumbotron .icon-facebook, .jumbotron .icon-twitter, .jumbotron .icon-reddit, .jumbotron .icon-github, .jumbotron .icon-keybase, .jumbotron .icon-discord {
	background-size: 22px;
	width: 22px;
	height: 22px;
	line-height: 22px;
}
.icon-facebook a, .icon-twitter a, .icon-reddit a, .icon-github a, .icon-keybase a, .icon-discord a {
	display: inline-block;
	width: 100%;
	height: 100%;
}
.icon-facebook {
	background-image: url("https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/facebook.svg");
}
.icon-twitter {
	background-image: url("https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/twitter.svg");
}
.icon-reddit {
	background-image: url("https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/reddit.svg");
}
.icon-github {
	background-image: url("https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/github.svg");
}
.icon-keybase {
	background-image: url("https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/keybase.svg");
}
.icon-discord {
	background-image: url("https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/discord.svg");
}

* {
	word-wrap: break-word;
}

.footer {
	margin-top: 30px;
	margin-bottom: 100px;
}

.footer .container {
	padding-top: 10px;
}

html:not(.js) .js,
html.js .no-js {
	display: none;
}

